--- a/chat-challenge/angular.json
+++ b/chat-challenge/angular.json
@@ -30,9 +30,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/primeng/resources/primeng.min.css",
-              "src/reset.scss"
+              "src/styles.scss"
             ]
           },
           "configurations": {
