--- a/chat-challenge/package.json
+++ b/chat-challenge/package.json
@@ -29,9 +29,13 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@primeuix/themes": "1.2.5",
+    "@tailwindcss/postcss": "^4.1.4",
+    "postcss": "^8.5.3",
     "primeicons": "7.0.0",
     "primeng": "20.3.0",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.6.1",
+    "tailwindcss": "4.1.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
